{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 34,
  "lineage": "09f4015a-fe20-7d91-c2a5-e181370daa0b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-cohortcore-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:604575884205:security-group/sg-01fa18c160c0c2797",
            "description": "dev-core-cohort-core-service-api/CohortCoreServicePublicALBSecurityGroup",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic by default",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01fa18c160c0c2797",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-0b9d54a2a9b701283"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-core-cohort-core-service-api-CohortCoreServicePublicALBSecurityGroup22B6C0EF-12CQERE7OIG1N",
            "name_prefix": "",
            "owner_id": "604575884205",
            "revoke_rules_on_delete": false,
            "tags": {
              "AutoOff": "false",
              "Confidentiality": "Public",
              "CostCentre": "tbc",
              "Environment": "dev",
              "Location": "gbr",
              "Owner": "exa",
              "Project": "Cohort API",
              "Service": "core"
            },
            "tags_all": {
              "AutoOff": "false",
              "Confidentiality": "Public",
              "CostCentre": "tbc",
              "Environment": "dev",
              "Location": "gbr",
              "Owner": "exa",
              "Project": "Cohort API",
              "Service": "core"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-017655c08d8ceee3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_managed_prefix_list.dev-users-publicip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-compiler-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:604575884205:security-group/sg-0a9bd169c475e1bfb",
            "description": "dev-core-compiler/CompilerPublicALBSecurityGroup",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic by default",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9bd169c475e1bfb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-0b9d54a2a9b701283"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-core-compiler-CompilerPublicALBSecurityGroup4E7D541E-1AHOSOPXHRZUV",
            "name_prefix": "",
            "owner_id": "604575884205",
            "revoke_rules_on_delete": false,
            "tags": {
              "AutoOff": "false",
              "Confidentiality": "Public",
              "CostCentre": "tbc",
              "Environment": "dev",
              "Location": "gbr",
              "Owner": "exa",
              "Project": "Cohort API",
              "Service": "core"
            },
            "tags_all": {
              "AutoOff": "false",
              "Confidentiality": "Public",
              "CostCentre": "tbc",
              "Environment": "dev",
              "Location": "gbr",
              "Owner": "exa",
              "Project": "Cohort API",
              "Service": "core"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-017655c08d8ceee3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_managed_prefix_list.dev-users-publicip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-extractservice-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:604575884205:security-group/sg-0b35167ecbcd29878",
            "description": "dev-core-extract-service/ExtractServicePublicALBSecurityGroup",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic by default",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b35167ecbcd29878",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-0b9d54a2a9b701283"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-core-extract-service-ExtractServicePublicALBSecurityGroup61E3DFAD-2EPD9C85DZA4",
            "name_prefix": "",
            "owner_id": "604575884205",
            "revoke_rules_on_delete": false,
            "tags": {
              "AutoOff": "false",
              "Confidentiality": "Public",
              "CostCentre": "tbc",
              "Environment": "dev",
              "Location": "gbr",
              "Owner": "exa",
              "Project": "Cohort API",
              "Service": "core"
            },
            "tags_all": {
              "AutoOff": "false",
              "Confidentiality": "Public",
              "CostCentre": "tbc",
              "Environment": "dev",
              "Location": "gbr",
              "Owner": "exa",
              "Project": "Cohort API",
              "Service": "core"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-017655c08d8ceee3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_managed_prefix_list.dev-users-publicip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-runtime-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:604575884205:security-group/sg-05d5b8f331210d249",
            "description": "dev-core-runtime/RuntimePublicALBSecurityGroup",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic by default",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d5b8f331210d249",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-0b9d54a2a9b701283"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-core-runtime-RuntimePublicALBSecurityGroup7287AE8B-Y51S0E2XN19V",
            "name_prefix": "",
            "owner_id": "604575884205",
            "revoke_rules_on_delete": false,
            "tags": {
              "AutoOff": "false",
              "Confidentiality": "Public",
              "CostCentre": "tbc",
              "Environment": "dev",
              "Location": "gbr",
              "Owner": "exa",
              "Project": "Cohort API",
              "Service": "core"
            },
            "tags_all": {
              "AutoOff": "false",
              "Confidentiality": "Public",
              "CostCentre": "tbc",
              "Environment": "dev",
              "Location": "gbr",
              "Owner": "exa",
              "Project": "Cohort API",
              "Service": "core"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-017655c08d8ceee3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_managed_prefix_list.dev-users-publicip"
          ]
        }
      ]
    }
  ]
}